Fixed text alignment for detail page and offline storage

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -980,6 +980,10 @@ h1.slogan {
   border-width: 0px;
 }
 
+.item p {
+  color: #444;
+}
+
 .item-icon-left .icon:before, .item-icon-right .icon:before {
   font-size: 10px;
 }
